2024_K8S_Test/demo3/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-deployment-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-test-pod-prod
  template:
    metadata:
      labels:
        app: k8s-test-pod-prod
    spec:
      containers:
      - name: web
        image: asia-east1-docker.pkg.dev/round-center-422013-u2/leo-k8s-demo/k8stest:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
