2024_K8S_Test/demo3/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-service-dev
spec:
  selector:
    app: k8s-test-pod-dev
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8080
  type: ClusterIP
