2024_K8S_Test/demo3/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-service-prod
spec:
  selector:
    app: k8s-test-pod-prod
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8080
  type: ClusterIP
